// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GradePicker renders points based grades 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "borderBottomColor": "darkgray",
      "borderBottomWidth": 0.5,
      "flexDirection": "row",
      "height": 48,
      "justifyContent": "space-between",
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "fontFamily": ".SFUIDisplay",
        },
        Object {
          "color": "#2D3B45",
          "fontFamily": ".SFUIDisplay-semibold",
          "fontSize": 20,
        },
        undefined,
      ]
    }
  >
    Grade
  </Text>
  <TouchableOpacity
    accessibilityComponentType="button"
    accessibilityTraits="button"
    activeOpacity={0.2}
    onLongPress={undefined}
    onPress={[Function]}
    onPressIn={undefined}
    onPressOut={undefined}
    style={undefined}
    testID="grade-picker.button"
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "fontFamily": ".SFUIDisplay",
          },
          Object {
            "color": "#2D3B45",
            "fontFamily": ".SFUIDisplay-semibold",
            "fontSize": 20,
          },
          undefined,
        ]
      }
    >
      
      5/10
    </Text>
  </TouchableOpacity>
</View>
`;

exports[`GradePicker renders the activity indicator when pending 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "borderBottomColor": "darkgray",
      "borderBottomWidth": 0.5,
      "flexDirection": "row",
      "height": 48,
      "justifyContent": "space-between",
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "fontFamily": ".SFUIDisplay",
        },
        Object {
          "color": "#2D3B45",
          "fontFamily": ".SFUIDisplay-semibold",
          "fontSize": 20,
        },
        undefined,
      ]
    }
  >
    Grade
  </Text>
  <TouchableOpacity
    accessibilityComponentType="button"
    accessibilityTraits="button"
    activeOpacity={1}
    style={undefined}
    testID="grade-picker.button"
  >
    <ActivityIndicator
      animating={true}
      color="#999999"
      hidesWhenStopped={true}
      size="small"
    />
  </TouchableOpacity>
</View>
`;

exports[`GradePicker renders with excused 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "borderBottomColor": "darkgray",
      "borderBottomWidth": 0.5,
      "flexDirection": "row",
      "height": 48,
      "justifyContent": "space-between",
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "fontFamily": ".SFUIDisplay",
        },
        Object {
          "color": "#2D3B45",
          "fontFamily": ".SFUIDisplay-semibold",
          "fontSize": 20,
        },
        undefined,
      ]
    }
  >
    Grade
  </Text>
  <TouchableOpacity
    accessibilityComponentType="button"
    accessibilityTraits="button"
    activeOpacity={0.2}
    onLongPress={undefined}
    onPress={[Function]}
    onPressIn={undefined}
    onPressOut={undefined}
    style={undefined}
    testID="grade-picker.button"
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "fontFamily": ".SFUIDisplay",
          },
          Object {
            "color": "#2D3B45",
            "fontFamily": ".SFUIDisplay-semibold",
            "fontSize": 20,
          },
          undefined,
        ]
      }
    >
      Excused
    </Text>
  </TouchableOpacity>
</View>
`;

exports[`GradePicker renders with no grade 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "borderBottomColor": "darkgray",
      "borderBottomWidth": 0.5,
      "flexDirection": "row",
      "height": 48,
      "justifyContent": "space-between",
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "fontFamily": ".SFUIDisplay",
        },
        Object {
          "color": "#2D3B45",
          "fontFamily": ".SFUIDisplay-semibold",
          "fontSize": 20,
        },
        undefined,
      ]
    }
  >
    Grade
  </Text>
  <TouchableOpacity
    accessibilityComponentType="button"
    accessibilityTraits="button"
    activeOpacity={0.2}
    onLongPress={undefined}
    onPress={[Function]}
    onPressIn={undefined}
    onPressOut={undefined}
    style={undefined}
    testID="grade-picker.button"
  >
    <Image
      source={1}
      style={
        Object {
          "tintColor": "#368BD8",
        }
      }
    />
  </TouchableOpacity>
</View>
`;
